added contacts as a service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,6 +49,8 @@
                         <div class="tab-pane fade" id="contacts">Contacts</div>
                         <div class="tab-pane fade" id="search">
                             <!--contact component-->
+                            <app-search></app-search>
+                            <!--<div>Search : {{message}}</div>-->
                             <app-contact></app-contact>
 
                         </div>
