--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -26,6 +26,13 @@ div {
     height: calc(100% - 120px);
 }
 
+.sideBar-search {
+    padding: 5px 10px;
+    width: 100%;
+    border: 0px;
+    border-bottom: 1px solid lightgray;
+}
+
 .sideBar div {
     width: 100%;
 }
@@ -73,6 +80,8 @@ div {
 
 .avatar-icon {
     position: relative;
+    width: 49px;
+    height: 49px;
 }
 
 .avatar-icon img {
@@ -93,7 +102,8 @@ div {
 /*status*/
 .status {
     position: absolute;
-    left: 10px;
+    top: 0px;
+    left: 0px;
     width: 14px;
     height: 14px;
     border-radius: 50%;
