--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,5 @@
+<input id="searchInput" type="text" [(ngModel)]="contactFilter" placeholder="Search..." class="sideBar-search" />
+
 <div class="row sideBar-body" *ngFor="let contact of filteredContacts">
     <div class="col-12 col-md-12">
         <div class="row time-container">
